Fix call gRPC successfully + add sample data

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,7 @@ eureka:
 
 grpc:
   client:
-    stock-service:
-      address: discovery://stock-service
+    stockService:
+      # address: discovery://stock-service
+      address: static://localhost:9090
       negotiationType: plaintext
