--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,10 +21,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    non-secure-port: 9090
+    non-secure-port-enabled: true
 
 grpc:
   client:
     stockService:
-      # address: discovery://stock-service
-      address: static://localhost:9090
+      address: discovery:///stock-service # work when set eureka.instance.non-secure-port: 9090
+      # address: static://localhost:9090
       negotiationType: plaintext
