--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     non-secure-port: 9090
-    non-secure-port-enabled: true
+    non-secure-port-enabled: false
 
 grpc:
   client:
